--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -2,40 +2,63 @@
 <resources>
 
     <string name="app_name">Maps App</string>
-
     <string name="basemap_thumbnail">basemap thumbnail</string>
-    <!-- recreation webmap url -->
-	<string name="rec_webmap_url">http://www.arcgis.com/home/item.html?id=6929c43e567647fb85e261beee7f5774</string>
-	<!-- recreation webmap itemID -->
-	<string name="rec_webmap_id">6929c43e567647fb85e261beee7f5774</string>
+
+    <!-- webmap urls -->
+    <string name="portal_url">http://www.arcgis.com</string>
+    <string name="rec_webmap_url">http://www.arcgis.com/home/item.html?id=6929c43e567647fb85e261beee7f5774</string>
+    <string name="topo_basemap_url">http://www.arcgis.com/home/item.html?id=d5e02a0c1f2b4ec399823fdd3c2fdebd</string>
+
+    <!-- webmap itemIDs -->
+    <string name="rec_webmap_id">6929c43e567647fb85e261beee7f5774</string>
+    <string name="topo_basemap_id">d5e02a0c1f2b4ec399823fdd3c2fdebd</string>
+    
     <!-- geocode service -->
     <string name="geocode_url">http://geocode.arcgis.com/arcgis/rest/services/World/GeocodeServer</string>
+
     <!-- route service -->
     <string name="routingservice_url">http://sampleserver3.arcgisonline.com/ArcGIS/rest/services/Network/USA/NAServer/Route</string>
+
     <!-- place search hint -->
-    <string name="address">San Diego Airport</string>
-    <!-- search action bar title -->
+    <string name="address">Place name or address</string>
+
+    <!-- action bar titles -->
     <string name="menu_search">Search</string>
-    <!-- route action bar title -->
-    <string name="menu_route">Route</string>
-    <!-- basemaps action bar title -->
+    <string name="menu_route">Routing</string>
     <string name="menu_basemaps">Basemaps</string>
+    <string name="action_location">Toggle Location Tracking</string>
+    <string name="action_directions">Driving Directions</string>
+
     <!-- directions button text -->
-    <string name="directions_button">Get Directions</string>
+    <string name="get_route">Get Route</string>
+
     <!-- location search hint -->
     <string name="my_location">My Location</string>
-    <string name="title_activity_directions">Directions</string>
-    <!-- action bar titles -->
-    <string name="action_settings">Settings</string>
-    <string name="action_about">About</string>
+    <string name="need_location_fix">Need a location fix before \'My Location\' can be used</string>
+
+    <!-- dialog titles -->
+    <string name="title_basemaps_dialog">Select Base Map</string>
+    <string name="title_routing_dialog">Routing</string>
+    <string name="title_directions_dialog">Driving Directions</string>
+
     <!-- popup menu items -->
     <string name="menu_edit">edit</string>
     <string name="menu_delete">delete</string>
     <string name="menu_save">save</string>
     <string name="menu_camera">attachment</string>
+
     <!-- progress dialog messages -->
-    <string name="fetching_basemaps">Fetching Basemaps</string>
+    <string name="fetching_basemap">Fetching Basemap</string>
+    <string name="fetching_basemaps">Fetching Basemap Gallery</string>
+    <string name="fetching_selected_basemap">Fetching Selected Basemap</string>
     <string name="address_search">Searching for Address</string>
     <string name="route_search">Searching for Route</string>
+    <string name="reverse_geocoding">Reverse Geocoding</string>
+    <string name="basemapSearchFailed">Basemap search failed</string>
+    <string name="routingFailed">Routing task failed</string>
+    <string name="addressSearchFailed">Address search failed</string>
+    <string name="noResultsFound">No results found</string>
+    <string name="route_time">Time</string>
+    <string name="route_distance">Distance</string>
 
 </resources>
