--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -6,13 +6,8 @@
 
     <!-- webmap urls -->
     <string name="portal_url">http://www.arcgis.com</string>
-    <string name="rec_webmap_url">http://www.arcgis.com/home/item.html?id=6929c43e567647fb85e261beee7f5774</string>
-    <string name="topo_basemap_url">http://www.arcgis.com/home/item.html?id=d5e02a0c1f2b4ec399823fdd3c2fdebd</string>
+    <string name="default_basemap_url">http://www.arcgis.com/home/item.html?id=8bf7167d20924cbf8e25e7b11c7c502c</string>
 
-    <!-- webmap itemIDs -->
-    <string name="rec_webmap_id">6929c43e567647fb85e261beee7f5774</string>
-    <string name="topo_basemap_id">d5e02a0c1f2b4ec399823fdd3c2fdebd</string>
-    
     <!-- geocode service -->
     <string name="geocode_url">http://geocode.arcgis.com/arcgis/rest/services/World/GeocodeServer</string>
 
@@ -28,7 +23,7 @@
     <string name="menu_basemaps">Basemaps</string>
     <string name="action_location">Toggle Location Tracking</string>
     <string name="action_directions">Driving Directions</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_measure">Measure</string>
 
     <!-- directions button text -->
     <string name="get_route">Get Route</string>
@@ -41,12 +36,6 @@
     <string name="title_basemaps_dialog">Select Base Map</string>
     <string name="title_routing_dialog">Routing</string>
     <string name="title_directions_dialog">Driving Directions</string>
-
-    <!-- popup menu items -->
-    <string name="menu_edit">edit</string>
-    <string name="menu_delete">delete</string>
-    <string name="menu_save">save</string>
-    <string name="menu_camera">attachment</string>
 
     <!-- progress dialog messages -->
     <string name="fetching_basemap">Fetching Basemap</string>
