portal url layout adjustments

--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -10,10 +10,11 @@
     
     <!-- sign in activity -->
     <string name="title_sign_in_activity">Sign In</string>
-    <string name="specify_portal_url">Specify a portal url:</string>
+    <string name="specify_portal_url">Specify the URL to your organization or your ArcGIS portal</string>
     <string name="continue_label">Continue</string>
     <string name="cancel">Cancel</string>
     <string name="verifying_portal">Verifying portal</string>
+    <string name="portal_url_hint">e.g., http://www.arcgis.com</string>
     
     <!-- content browser -->
     <string name="fetching_maps">Fetching maps</string>
