--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -7,6 +7,9 @@
     <!-- navigation drawer -->
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="my_maps">My Maps</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="sign_in">Sign In</string>
     
     <!-- sign in activity -->
     <string name="title_sign_in_activity">Sign In</string>
@@ -16,8 +19,6 @@
     <string name="verifying_portal">Verifying portal</string>
     <string name="portal_url_hint">e.g., http://www.arcgis.com</string>
     <string name="failed_sign_in">Failed to sign in.</string>
-    <string name="sign_out">Sign Out</string>
-    <string name="sign_in">Sign In</string>
     
     <!-- content browser -->
     <string name="fetching_maps">Fetching maps</string>
