Routing Dialog Fragment Modified. Swap and Add My Loc button added

--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -70,5 +70,8 @@
     <string name="noResultsFound">No results found</string>
     <string name="route_time">Time</string>
     <string name="route_distance">Distance</string>
-
+    <string name="swap_addresses">Interchange the addresses</string>
+	<string name="useCurrlocation">Use My Location</string>
+	<string name="routing_title">Routing</string>
+	<string name="clearText">Clear Text</string>
 </resources>
