--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="compass_bkg">Compass Background</string>
+    <string name="compass_arrow">Compass Arrow</string>
     <string name="app_name">Maps App</string>
     <string name="basemap_thumbnail">basemap thumbnail</string>
-    
+
     <!-- navigation drawer -->
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="my_maps">My Maps</string>
     <string name="sign_out">Sign Out</string>
     <string name="sign_in">Sign In</string>
-    
+
     <!-- sign in activity -->
     <string name="title_sign_in_activity">Sign In</string>
     <string name="specify_portal_url">Specify the URL to your organization or your ArcGIS portal</string>
@@ -19,7 +21,7 @@
     <string name="verifying_portal">Verifying portal</string>
     <string name="portal_url_hint">e.g., http://www.arcgis.com</string>
     <string name="failed_sign_in">Failed to sign in.</string>
-    
+
     <!-- content browser -->
     <string name="fetching_maps">Fetching maps</string>
     <string name="refresh">Refresh</string>
