--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -3,14 +3,14 @@
 
     <string name="app_name">Maps App</string>
     <string name="basemap_thumbnail">basemap thumbnail</string>
-    
+
     <!-- navigation drawer -->
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="my_maps">My Maps</string>
     <string name="sign_out">Sign Out</string>
     <string name="sign_in">Sign In</string>
-    
+
     <!-- sign in activity -->
     <string name="title_sign_in_activity">Sign In</string>
     <string name="specify_portal_url">Specify the URL to your organization or your ArcGIS portal</string>
@@ -19,7 +19,7 @@
     <string name="verifying_portal">Verifying portal</string>
     <string name="portal_url_hint">e.g., http://www.arcgis.com</string>
     <string name="failed_sign_in">Failed to sign in.</string>
-    
+
     <!-- content browser -->
     <string name="fetching_maps">Fetching maps</string>
     <string name="refresh">Refresh</string>
@@ -71,7 +71,13 @@
     <string name="route_time">Time</string>
     <string name="route_distance">Distance</string>
     <string name="swap_addresses">Interchange the addresses</string>
-	<string name="useCurrlocation">Use My Location</string>
-	<string name="routing_title">Routing</string>
-	<string name="clearText">Clear Text</string>
+    <string name="useCurrlocation">Use My Location</string>
+    <string name="routing_title">Routing</string>
+    <string name="clearText">Clear Text</string>
+
+    <!-- ImageView content Descriptions -->
+    <string name="icon_for_searchResult">Icon indicating Search</string>
+    <string name="icon_for_directions_and_routing">Get Directions or Get Route</string>
+    <string name="icon_cancel">Remove the current search</string>
+
 </resources>
