--- a/maps-app/res/values/strings.xml
+++ b/maps-app/res/values/strings.xml
@@ -40,7 +40,7 @@
     <!-- action bar titles -->
     <string name="menu_basemaps">Basemaps</string>
     <string name="action_location">Toggle Location Tracking</string>
-    <string name="action_measure">Measure</string>
+    <string name="action_measure">Edit Map</string>
 
     <!-- directions button text -->
     <string name="get_route">Get Route</string>
