--- a/maps-app/src/main/res/values/strings.xml
+++ b/maps-app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Maps App</string>
+    <string name="app_name">Maps App Quartz</string>
     <string name="basemap_thumbnail">basemap thumbnail</string>
 
     <!-- navigation drawer -->
@@ -32,8 +32,8 @@
     <string name="geocode_url">http://geocode.arcgis.com/arcgis/rest/services/World/GeocodeServer</string>
 
     <!-- route service -->
-    <string name="routingservice_url">http://sampleserver6.arcgisonline.com/arcgis/rest/services/NetworkAnalysis/SanDiego/NAServer/Route</string>
-    <!--string name="routingservice_url">http://route.arcgis.com/arcgis/rest/services/NetworkAnalysis/SanDiego/NAServer/Route</string-->
+    <!--string name="routingservice_url">http://sampleserver6.arcgisonline.com/arcgis/rest/services/NetworkAnalysis/SanDiego/NAServer/Route</string-->
+    <string name="routingservice_url">https://route.arcgis.com/arcgis/rest/services/World/Route/NAServer/Route_World/</string>
 
     <!-- place search hint -->
     <string name="address">Place name or address</string>
@@ -90,10 +90,14 @@
     <!-- floating action button -->
     <string name="imagebutton_content_desc">Turn GPS on/off</string>
 
-    <!-- Alert dialog strings-->
+    <!-- Toast/alert  strings-->
     <string name="location_tracking_off">Location tracking is required for this app.  Do you want modify the location options?</string>
     <string name="wireless_off">An internet connection is needed for this app. Do you want to modify the wireless settings?</string>
     <string name="open_location_options">Yes</string>
     <string name="icon_for_navigation_menue"/>
+    <string name="geo_locate_error">Geocode failed on address</string>
+    <string name="no_route_found">No route could be found</string>
+    <string name="location_not_foud">We\'re sorry, we couldn\'t find a location with the name</string>
+
 
 </resources>
