--- a/maps-app/src/main/res/values/strings.xml
+++ b/maps-app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Maps App Quartz</string>
+    <string name="app_name">Maps App</string>
     <string name="basemap_thumbnail">basemap thumbnail</string>
 
     <!-- navigation drawer -->
